# csd_data_extraction

./: README.md  pyproject.toml
csd_data_extraction/: download_structures.py
